--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -1,4 +1,37 @@
 {
+    "homeheader": {
+        "speciality": "Chuyên Khoa",
+        "searchdoctor": "Chuyên khoa nổi bật",
+        "health-facility": "Cơ Sở Y Tế",
+        "select-room": "Phòng khám nổi bật",
+        "doctor1": "Bác Sĩ",
+        "select-doctor": "Bác sĩ giỏi",
+        "medical-package": "Gói Khám Bệnh",
+        "generalHC": "Khám sức khỏe tổng quát",
+        "handbook": "Cẩm Nang",
+        "handbook-des": "Cẩm nang sức khỏe",
+        "support": "Hỗ trợ",
+        "welcome": "Xin chào"
+    },
+    "banner": {
+        "title1": "NỀN TẢNG Y TẾ",
+        "title2": "CHĂM SÓC SỨC KHỎE TOÀN DIỆN",
+        "bannerp1": "Khám chuyên khoa",
+        "bannerp2": "Khám từ xa",
+        "bannerp3": "Khám tổng quát",
+        "bannerp4": "Xét nghiệm y học",
+        "bannerp5": "Sức khỏe tinh thần",
+        "bannerp6": "Khám nha khoa"
+    },
+
+
+
+
+
+
+
+
+
     "common": {
         "add": "Thêm",
         "edit": "Sửa",
