--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -1,153 +1,132 @@
 {
-    "homeheader": {
-        "speciality": "Chuyên Khoa",
-        "searchdoctor": "Chuyên khoa nổi bật",
-        "health-facility": "Cơ Sở Y Tế",
-        "select-room": "Phòng khám nổi bật",
-        "doctor1": "Bác Sĩ",
-        "select-doctor": "Bác sĩ giỏi",
-        "medical-package": "Gói Khám Bệnh",
-        "generalHC": "Khám sức khỏe tổng quát",
-        "handbook": "Cẩm Nang",
-        "handbook-des": "Cẩm nang sức khỏe",
-        "support": "Hỗ trợ",
-        "welcome": "Xin chào"
-    },
-    "banner": {
-        "title1": "NỀN TẢNG Y TẾ",
-        "title2": "CHĂM SÓC SỨC KHỎE TOÀN DIỆN",
-        "bannerp1": "Khám chuyên khoa",
-        "bannerp2": "Khám từ xa",
-        "bannerp3": "Khám tổng quát",
-        "bannerp4": "Xét nghiệm y học",
-        "bannerp5": "Sức khỏe tinh thần",
-        "bannerp6": "Khám nha khoa"
-    },
-
-
-
-
-
-
-
-
-
-    "common": {
-        "add": "Thêm",
-        "edit": "Sửa",
-        "delete": "Xóa",
-        "decentralize": "Phân quyền",
-        "close": "Đóng",
-        "save": "Lưu",
-        "refresh": "Refresh",
-        "accept": "Chấp nhận",
-        "confirm": "Xác nhận",
-        "confirm-this-task": "Bạn có chắc chắn thực hiện tác vụ này?",
-        "fail-to-load-data": "Không thể tải về dữ liệu",
-        "unknown-error": "Có lỗi xảy ra",
-        "internal-server-error": "Lỗi kết nối",
-        "bad-request": "Yêu cầu không hợp lệ",
-        "forbiden-request": "Thông tin truyền vào không hợp lệ",
-        "fail-to-load-all-code": "Không thể tải về dữ liệu allcode",
-        "sum": "Tổng",
-        "date-range-invalid": "Khoảng thời gian không hợp lệ"
-    },
-    "login": {
-        "login": "Đăng nhập",
-        "username": "Tên đăng nhập",
-        "password": "Mật khẩu",
-        "userpass-wrong": "Sai tên đăng nhập hoặc mật khẩu!"
-    },
-    "menu": {
-        "system": {
-            "header": "Hệ thống",
-            "system-administrator": {
-                "header": "Quản trị hệ thống",
-                "user-manage": "Quản lý người sử dụng",
-                "user-redux": "Quản lý user redux",
-                "register-package-group-or-account": "Đăng ký gói dịch vụ cho nhóm/tài khoản"
-            },
-            "system-parameter": {
-                "header": "Tham số hệ thống"
-            }
-        }
-    },
-    "system": {
-        "user-manage": {
-            "fail-to-load-fouser": "Không thể tải về danh sách người dùng",
-            "user-id": "Mã người sử dụng",
-            "usertype": "Loại người dùng",
-            "username": "Tên người dùng",
-            "fullname": "Tên đầy đủ",
-            "mobile": "Số điện thoại",
-            "email": "Email",
-            "status": "Trạng thái",
-            "add-user": "Thêm người dùng",
-            "edit-user": "Sửa thông tin người dùng",
-            "password": "Mật khẩu",
-            "retype-password": "Nhập lại mật khẩu",
-            "add-user-success": "Thêm người dùng thành công",
-            "edit-user-success": "Thay đổi thông tin người dùng thành công",
-            "add-user-fail": "Thêm người dùng thất bại",
-            "edit-user-fail": "Thay đổi thông tin người dùng thất bại",
-            "del-user-success": "Xóa người dùng thành công",
-            "del-user-fail": "Xóa người dùng thất bại",
-            "invalid-input": {
-                "username": "Quý khách vui lòng nhập tên người dùng",
-                "fullname": "Quý khách vui lòng nhập tên đầy đủ",
-                "password": "Quý khách vui lòng nhập mật khẩu"
-            },
-            "sure-delete-user": "Bạn có chắc chắn muốn xóa người dùng này?"
-        },
-        "product-manage": {
-            "fail-to-load-foprtype": "Không thể tải về danh sách gói",
-            "prid": "Mã gói",
-            "prname": "Tên gói",
-            "prtype": "Loại gói",
-            "status": "Trạng thái",
-            "description": "Diễn giải",
-            "effective-date": "Ngày hiệu lực",
-            "expiration-date": "Ngày hết hiệu lực",
-            "add-product": "Thêm gói",
-            "add-product-success": "Thêm gói thành công",
-            "add-product-fail": "Thêm gói thất bại",
-            "edit-product": "Sửa thông tin gói",
-            "package-decentralize": "Phân quyền chức năng",
-            "edit-product-success": "Thay đổi thông tin gói thành công",
-            "edit-product-fail": "Thay đổi thông tin gói thất bại",
-            "delete-product-success": "Xóa gói thành công",
-            "delete-product-fail": "Xóa gói thất bại",
-            "invalid-input": {
-                "prid": "Quý khách vui lòng nhập mã gói",
-                "prname": "Quý khách vui lòng nhập tên gói"
-            },
-            "fail-to-load-decentralize-info": "Không thể tải về thông tin phân quyền chức năng",
-            "save-decentralize-success": "Lưu phân quyền chức năng thành công",
-            "save-decentralize-fail": "Lưu phân quyền chức năng thất bại",
-            "sure-delete-package": "Bạn có chắc chắn muốn xóa gói này?"
-        },
-        "register-package-group-or-acc": {
-            "assign-service-package-to-customer": "Gán gói dịch vụ cho khách hàng",
-            "package-name": "Tên gói",
-            "assign-type": "Loại gán",
-            "cust-acc-group": "Nhóm KH/Tài khoản",
-            "effective-date": "Ngày hiệu lực",
-            "expiration-date": "Ngày hết hiệu lực",
-            "assign": "Gán",
-            "manage-assign-groups": "Quản lý gán nhóm",
-            "group-cust-acc-name": "Tên nhóm/tài khoản KH",
-            "del-assign": "Xóa gán",
-            "fail-to-load-manage-assign-groups-list": "Không thể tải về thông tin quản lý gán nhóm",
-            "invalid-selected": {
-                "currentfoProduct": "Gói đang chọn không hợp lệ",
-                "currentAssignType": "Loại gán không hợp lệ",
-                "currentFoUser": "Nhóm KH/Tài khoản không hợp lệ"
-            },
-            "assign-service-package-to-customer-success": "Gán gói dịch vụ cho khách hàng thành công",
-            "assign-service-package-to-customer-fail": "Gán gói dịch vụ cho khách hàng thất bại",
-            "remove-assign-success": "Bỏ gán gói dịch vụ cho khách hàng thành công",
-            "remove-assign-fail": "Bỏ gán gói dịch vụ cho khách hàng thất bại",
-            "sure-delete-assign": "Bạn có chắc chắn muốn bỏ gán gói dịch vụ cho khách hàng?"
-        }
-    }
+  "homeheader": {
+      "speciality": "Chuyên Khoa",
+      "searchdoctor": "Chuyên khoa nổi bật",
+      "health-facility": "Cơ Sở Y Tế",
+      "select-room": "Phòng khám nổi bật",
+      "doctor1": "Bác Sĩ",
+      "select-doctor": "Bác sĩ giỏi",
+      "medical-package": "Gói Khám Bệnh",
+      "generalHC": "Khám sức khỏe tổng quát",
+      "handbook": "Cẩm Nang",
+      "handbook-des": "Cẩm nang sức khỏe",
+      "support": "Hỗ trợ",
+      "welcome": "Xin chào "
+  },
+  "banner": {
+      "title1": "NỀN TẢNG Y TẾ",
+      "title2": "CHĂM SÓC SỨC KHỎE TOÀN DIỆN",
+      "bannerp1": "Khám chuyên khoa",
+      "bannerp2": "Khám từ xa",
+      "bannerp3": "Khám tổng quát",
+      "bannerp4": "Xét nghiệm y học",
+      "bannerp5": "Sức khỏe tinh thần",
+      "bannerp6": "Khám nha khoa"
+  },
+  "menu": {
+      "admin": {
+          "manage-user": "Người dùng",
+          "manage-doctor": "Quản lý bác sĩ",
+          "manage-admin": "Quản lý admin",
+          "crud": "Quản lý User",
+          "crud-redux": "Quản lý User-Redux",
+          "clinic": "Phòng khám",
+          "manage-clinic": "Quản lý phòng khám",
+          "specialty": "Chuyên khoa",
+          "manage-specialty": "Quản lý chuyên khoa",
+          "handbook": "Cẩm nang",
+          "manage-handbook": "Quản lý cẩm nang"
+         
+      },
+      "doctor": {
+          "manage-schedule": "Quản lý kế hoạch khám bệnh",
+          "manage-patient": "Quản lý bệnh nhân khám bệnh"
+      }
+  },
+  "manage-user": {
+      "add": "Thêm mới người dùng",
+      "email": "Email",
+      "password": "Mật khẩu",
+      "last-name": "Tên",
+      "first-name": "Họ và tên đệm",
+      "phone": "Số điện thoại",
+      "address": "Địa chỉ",
+      "gender": "Giới tính",
+      "position": "Chức danh",
+      "role": "Vai trò",
+      "image": "Ảnh đại diện",
+      "save": "Lưu người dùng",
+      "edit": "Cập nhật người dùng",
+      "postImg" :"Tải ảnh"
+  },
+  "homepage": {
+      "outstanding-doctor": "Bác sĩ nổi bậc tuần qua",
+      "learn-more": "XEM THÊM",
+      "specialty-popular": "Chuyên khoa phổ biến",
+      "medical-facility": "Cơ sở y tế nổi bật"
+  },
+  "manage-schedule": {
+      "title": "Quản lý kế hoạch khám bệnh của bác sĩ",
+      "choose-doctor": "Chọn bác sĩ",
+      "choose-date": "Chọn ngày",
+      "save": "Lưu thông tin"
+  },
+  "patient": {
+      "detail-doctor": {
+          "schedule": "Lịch khám",
+          "no-schedule": "Không có lịch khám cho ngày này, vui lòng chọn ngày khác!",
+          "choose": "Chọn ",
+          "book-free": " và đặt (miễn phí)"
+      },
+      "extra-info-doctor": {
+          "text-address": "Địa chỉ phòng khám",
+          "price": "Giá khám",
+          "detail": "Xem chi tiết",
+          "hide-detail": "Ẩn bảng giá",
+          "payment": "Người bệnh có thể thanh toán chi phí bằng hình thức:"
+      },
+      "booking-modal": {
+          "title": "Thông tin đặt lịch khám bệnh",
+          "name": "Họ và tên",
+          "address": "Địa chỉ liên hệ",
+          "reason": "Lý do khám",
+          "date": "Ngày sinh",
+          "gender": "Giới tính",
+          "btn-close": "Hủy",
+          "btn-save": "Xác nhận",
+          "phone": "Số điện thoại",
+          "price-booking": "Miễn phí đặt lịch",
+          "price":"Giá khám"
+      },
+      "specialty-modal": {
+          "learn-more": "Xem thêm"
+      },
+      "verify-email": {
+          "verify-email-success": "Xác nhận lịch hẹn thành công",
+          "verify-email-failed": "Lịch hẹn không tồn tại hoặc đã được xác nhận"
+      },
+      "support": {
+          "support-title": "Hướng dẫn cách chat với đội ngũ support của HealthCare",
+          "support-content": "Tạo mới một tài khoản, tiến hành tìm kiếm support và yêu cầu được tư vấn",
+          "click-here": "Ấn vào đây",
+          "support": "Hỗ trợ"
+      }
+  },
+  "admin": {
+      "manage-doctor": {
+          "title": "Tạo thêm thông tin bác sĩ",
+          "choose-doctor": "Chọn bác sĩ",
+          "intro": "Thông tin giới thiệu",
+          "create-button": "Tạo thông tin",
+          "save-button": "Lưu thông tin",
+          "price": "Giá khám bệnh",
+          "payment": "Phương thức thanh toán",
+          "province": "Tỉnh thành",
+          "clinic-name": "Tên phòng khám",
+          "clinic-address": "Địa chỉ phòng khám",
+          "clinic-note": "Ghi chú",
+          "choose-specialty": "Chọn chuyên khoa",
+          "choose-clinic": "Chọn phòng khám"
+      }
+  }
 }
