--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -63,7 +63,9 @@
       "outstanding-doctor": "Outstanding Doctor",
       "learn-more": "LEARN MORE",
       "specialty-popular": "Popular specialties",
-      "medical-facility": "Outstanding medical facility"
+      "medical-facility": "Outstanding medical facility",
+      "out-standing-doctor" : "Last week's featured doctor",
+      "more-infomation" :   "See More Information"
   },
   "manage-schedule": {
       "title": "Manage doctor's examination plan",
